--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "babel src -d dist",
+    "build": "babel . -d dist",
     "test": "mocha"
   },
   "author": "",
